--- a/gb/20/1/5/n11769309.md
+++ b/gb/20/1/5/n11769309.md
@@ -1,62 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/ffbns289/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ffbns289/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jcaojz3768/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jcaojz3768/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jcaojz3768/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jcaojz3768/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jcaojz3768/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jcaojz3768/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>李铁接过主帅教鞭 率中国男足冲击世界杯</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/20200105-Chi-Jin-Li-Tie-1194060670-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/20200105-Chi-Jin-Li-Tie-1194060670-600x400.jpg" />
 <h6>42岁的李铁正式接过中国男足主帅教鞭。(Chung Sung-Jun/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2020年01月05日讯】（大纪元记者李熔石综合报导）意大利老帅里皮辞职近两个月后，42岁的<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E6%9D%8E%E9%93%81.md">李铁</a>正式接过<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%94%B7%E8%B6%B3.md">中国男足</a>主帅教鞭，完成了从中国队球员到主帅的过渡。他的最重要任务是带领中国队晋级2022年卡塔尔足球世界杯亚洲区预选赛12强赛。</p>
-<h2><a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E6%9D%8E%E9%93%81.md">李铁</a>从球员转身为主帅</h2>
-<p>在去年11月世界杯亚洲区预选赛<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/40%E5%BC%BA.md">40强</a>赛上，<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%94%B7%E8%B6%B3.md">中国男足</a>客场1：2负于叙利亚后，71岁的里皮眼看无法改变中国队的现状，愤然辞职，让中国足协措手不及。结果通过竞聘，李铁击败了另外两名本土教练李霄鹏和王宝山，成为新一届中国男足主教练。</p>
+	<p>【大纪元2020年01月05日讯】（大纪元记者李熔石综合报导）意大利老帅里皮辞职近两个月后，42岁的<ahref="https://github.com/jcaojz3768/djy/blob/master/gb/tag/%E6%9D%8E%E9%93%81.md#1">李铁</a>正式接过<ahref="https://github.com/jcaojz3768/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%94%B7%E8%B6%B3.md#1">中国男足</a>主帅教鞭，完成了从中国队球员到主帅的过渡。他的最重要任务是带领中国队晋级2022年卡塔尔足球世界杯亚洲区预选赛12强赛。</p>
+<h2><ahref="https://github.com/jcaojz3768/djy/blob/master/gb/tag/%E6%9D%8E%E9%93%81.md#1">李铁</a>从球员转身为主帅</h2>
+<p>在去年11月世界杯亚洲区预选赛<ahref="https://github.com/jcaojz3768/djy/blob/master/gb/tag/40%E5%BC%BA.md#1">40强</a>赛上，<ahref="https://github.com/jcaojz3768/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E7%94%B7%E8%B6%B3.md#1">中国男足</a>客场1：2负于叙利亚后，71岁的里皮眼看无法改变中国队的现状，愤然辞职，让中国足协措手不及。结果通过竞聘，李铁击败了另外两名本土教练李霄鹏和王宝山，成为新一届中国男足主教练。</p>
 <p>李铁16岁入选健力宝青年队，曾远赴巴西留学五年。李铁司职防守型“后腰”，2001年入选了中国国家队，并参加了2002年韩日世界杯。之后，他为英格兰球队埃弗顿效力了四个赛季；2006年转会到谢菲尔德联队，效力了两个赛季。</p>
 <p>退役后，李铁先后出任广州恒大以及中国男足助教。在里皮、斯科拉里等人身边积累了一些经验后，李铁独立执教中甲球队——河北华夏和武汉卓尔，并带领两队都升入中超。2019赛季，武汉卓尔以“升班马”的身份获得了中超联赛第六名，李铁功不可没。</p>
 <h2>中国男足目标晋级12强</h2>
-<p>接过中国男足主帅这个“烫手山芋”后，李铁的首要任务是率领球队能够从世界杯亚洲区预选赛<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/40%E5%BC%BA.md">40强</a>赛中出线。目前40强赛赛程过半，中国队所在的A组，叙利亚4战全胜，积12分，排名第一；中国和菲律宾皆为2胜1平1负，积7分，中国队凭借净胜球优势，位列第二。目前来看，中国队以“小组第一”身份出线已经几乎不可能。</p>
+<p>接过中国男足主帅这个“烫手山芋”后，李铁的首要任务是率领球队能够从世界杯亚洲区预选赛<ahref="https://github.com/jcaojz3768/djy/blob/master/gb/tag/40%E5%BC%BA.md#1">40强</a>赛中出线。目前40强赛赛程过半，中国队所在的A组，叙利亚4战全胜，积12分，排名第一；中国和菲律宾皆为2胜1平1负，积7分，中国队凭借净胜球优势，位列第二。目前来看，中国队以“小组第一”身份出线已经几乎不可能。</p>
 <p>接下来，40强赛第二阶段比赛，中国队有三个主场，分别对阵菲律宾、马尔代夫和叙利亚，唯一的一个客场是打关岛，赛程对中国队非常有利。</p>
 <p>中国队的最后一场比赛是在主场迎战叙利亚，那时估计对手很可能已提前出线，不会再同中国队死拼；但如果叙利亚之前在弱旅身上意外丢分，那就要与中国队“死磕”了，中国队的晋级形势恐将会急转直下。</p>
 <h2>菲律宾成直接竞争对手</h2>
 <p>从目前形势来看，各方对于中国男足的出线前景比较乐观。如果接下来四战全胜，最终拿到19分，中国队很可能在八个小组中，成为成绩较好的五个第二名中的一个，从而晋级12强。</p>
 <p>看起来出线之路比较平坦，但想一想上届40强赛，中国男足面对香港难求一胜，生生把“上上签”打成了“死亡之组”。本届预选赛，中国队直接竞争对手换成了菲律宾。此前，中国队在客场0：0被对手逼平。虽然当时在场面上，中国队占有优势，但几乎没有获得直接威胁对方球门的机会。如今改由李铁带队，中国队的结局将会如何，让我们拭目以待吧。</p>
 <p>责任编辑：郑煌</p>
-
+	
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/5/n11769309.htm">李铁接过主帅教鞭 率中国男足冲击世界杯</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743071.htm">中国男足年薪超日本球员4倍 收入与战绩悬殊</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/17/n11661949.htm">中国男足晋级2022年世界杯之路 受到重创</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/15/n11659327.htm">袁斌：被政治绑架，国足只能是扶不起的阿斗</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/16/n11591206.htm">世界杯亚洲区预赛 中国男足被菲律宾逼平</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/24/n11405288.htm">世界杯预选赛40强赛 中国男足再抽好签</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/6/18/n10494430.htm">【新闻看点】冰岛世界杯爆冷 中国球迷感慨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/3/30/n10264460.htm">【新闻看点】“灾难级”惨败 国足症结在哪？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/9/6/n9602402.htm">奇迹难再现 中国男足连续四届无缘世界杯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/9/3/n9595361.htm">中国男足主场小胜 晋级悬念留至最后一轮</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767049.htm">伊朗二号人物索莱马尼被击毙 他是什么人？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768055.htm">川普击毙伊朗二号人物 对中共释何种信号</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768058.htm">习近平谈中共领导人更替 接班人制再引关注</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11766999.htm">中共警察强制中小学男生抽血 建DNA数据库</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737632.htm">自伐者无功！三国谋士许攸的教训</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11760693.htm">蒋经国一生反共信念的历程</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745673.htm">父梦桂树 子梦黄鹤 奇梦超前预言一生</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/1/15/n4343055.htm">士为知己者死 古人交友重义胜于生命</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11764607.htm">“中国淡水鱼之王”长江白鲟被宣告灭绝</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11764609.htm">川普为何下令击毙伊朗将军 五角大楼发声明</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766230.htm">杭州政府要求全民储粮 被指转嫁粮食危机</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768186.htm">【新闻看点】台湾大选谁赢 北京都遇难题</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/2/n11763808.htm">家被强拆父母冤死 男子出狱报复致1死2伤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743745.htm">【罗厨寻味】年菜系列之一：砂锅焗红鱼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/2/n11763655.htm">林夕歌曲作词人变佚名 网民斥中共电视台无耻</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/2/n11764071.htm">华谊老板致员工信责影视团队：失误堪称致命</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766037.htm">凑成好字 40岁章子怡宣布新年二胎产子</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767649.htm">第34届金唱片奖 防弹少年团获音源部门大奖</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766447.htm">姚晨送祝福意外引插曲 章子怡高情商化解尴尬</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/17/9/3/n9595361.md#1">中国男足主场小胜 晋级悬念留至最后一轮</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/17/9/6/n9602402.md#1">奇迹难再现 中国男足连续四届无缘世界杯</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/3/30/n10264460.md#1">【新闻看点】“灾难级”惨败 国足症结在哪？</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/6/18/n10494430.md#1">【新闻看点】冰岛世界杯爆冷 中国球迷感慨</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769309.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11009341.md#1" target="_blank">阎长贵：陶铸是被谁打倒的？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/16/n12815794.md#1">【未解之谜】缅甸奇僧亲历 揭密生死轮回</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/13/n12809133.md#1">东方的辛德勒—约翰?拉贝</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/14/n12810364.md#1">西方轮回研究漫笔：转世前的安排和约定</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/20/4/3/n11999735.md#1">华盛顿将军系列故事：打马少年 入画江山? ?</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/18/n12820656.md#1">【未解之谜】临死体验后发生的奇迹</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12824802.md#1">一周军情速递：美军警告中共 强硬回应金与正</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12824817.md#1">【新闻看点】美中公告大不同 蓬佩奥剑指2024</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/22/n12827737.md#1">【新闻大家谈】中共国师挖坑 拜登叫习勿信宣传</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/19/n12823243.md#1">【新闻看点】两战狼疯狂布林肯吃惊 习看低拜登？</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12823419.md#1">美议员：是时候把中共赶出联合国安理会了</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12823519.md#1">美中首次会晤后 美国官方声明全文翻译</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/22/n12827069.md#1">从不抽烟 台前主播萧彤雯罹肺腺癌零期</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/21/n12826073.md#1">感佩台湾垃圾分类 杜汶泽：爱一地犹如爱一人</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/19/n12823173.md#1">质疑镜头遭剪辑沦为陪衬 张靓颖暗讽综艺节目</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/21/n12825025.md#1">《餐车》回到原点 黄秋生因KID一句话走心</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12823452.md#1">《查克史奈德之正义联盟》影评：DC的史诗巨作！</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12824338.md#1">鲑鱼5大营养补脑、护心血管 3类人不宜多吃</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/19/n12822810.md#1">春分是养生关键 不只要养肝！1图看懂怎么吃</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/18/n12818954.md#1">癌症病人能打新冠疫苗吗？医师：一类癌症要谨慎</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/20/n12824292.md#1">【重播】变种病毒感染比例大增 第四波疫情恐将至？</a></li>
+<li><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/21/n12825217.md#1">西澳70头虎鲸围攻16米长蓝鲸 搏斗4小时</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jcaojz3768/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jcaojz3768/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/5/n11769309.htm">李铁接过主帅教鞭 率中国男足冲击世界杯</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jcaojz3768/djy/blob/master/gb/20/1/5/n11769309.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jcaojz3768/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jcaojz3768/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jcaojz3768/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jcaojz3768/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcaojz3768/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
